--- a/wercker.yml
+++ b/wercker.yml
@@ -21,6 +21,7 @@ build:
     # http://devcenter.wercker.com/docs/steps/index.html
   steps:
     - arjen/hugo-build@1.8.1:
+        theme: "slender"
         version: "0.15"
         disable_pygments: true
 deploy:
