--- a/wercker.yml
+++ b/wercker.yml
@@ -20,6 +20,10 @@ build:
     # Read more about steps on our dev center:
     # http://devcenter.wercker.com/docs/steps/index.html
   steps:
+    - script:
+        name: initialize git submodules (themes)
+        code: |
+          git submodule update --init --recursive
     - arjen/hugo-build@1.8.1:
         theme: slender
         config: "config.toml"
