--- a/themes/slender/exampleSite/config.toml
+++ b/themes/slender/exampleSite/config.toml
@@ -1,12 +1,16 @@
-baseurl = "http://brandon-harris.com"
-title = "Brandon Harris"
+# config.toml
+# https://github.com/CrimsonRay/slender
+
+baseurl = "https://crimsonray.github.io/slender"
+title = "Slender"
 languageCode = "en-US"
 MetaDataFormat = "toml"
+theme = "slender"
 paginate = 3
 PaginatePath = "/"
 
 [author]
-    name = "Brandon Harris"
+    name = "CrimsonRay"
 
 [permalinks]
 
@@ -14,7 +18,7 @@ PaginatePath = "/"
     page = "/:title/"
 
     # Permalink format for blog posts.
-    post = "/posts/:title/"
+    post = "/article/:title/"
 
 [params]
 
@@ -23,30 +27,32 @@ PaginatePath = "/"
     colorscheme = "white"
 
     # Tagline; HTML accepted here. Keep it concise.
-    tagline = ""
+    tagline = "for Hugo"
 
     # Footer; Markdown accepted here.
-    footer = "Copyright 2016 &copy; Brandon Harris"
+    footer = "Copyright 2015 &copy; CrimsonRay"
 
     # Description and keywords for <meta> tags.
     # Remember to set this for your main page.
     # This will be overridden by whatever is set by the page or post,
     # defined by `description` and `keywords` variables in the front matter
     # of the markdown file.
-    description = "Personal blog for Brandon Harris, a software engineer in Austin, TX"
-    keywords = "brandon harris, ruby, python, go, SQL, austin, software engineer austin, brandon harris blog"
+    description = "Example site for Slender, a minimalist theme for Hugo."
+    keywords = "hugo, slender, minimalist, theme"
 
     # Social links, must be full URLs (e.g. https://github.com/CrimsonRay/).
     # Remove, comment, or leave blank any field to leave them out.
-    email = "mailto:brandon@brandon-harris.com"
-    github = "https://github.com/bbwharris"
-    twitter = "https://twitter.com/bbwharris"
-    linkedin = "https://www.linkedin.com/in/brandonbharris"
-    facebook = "https://www.facebook.com/brandon.b.w.harris"
+    email = "mailto:your-email"
+    github = "url-to-your-github"
+    bitbucket = "url-to-your-bitbucket"
+    twitter = "url-to-your-twitter"
+    stackoverflow = "url-to-your-stackoverflow"
+    linkedin = "url-to-your-linkedin"
+    facebook = "url-to-your-facebook"
 
     # Google Analytics
     # Remove, comment, or leave it blank if you don't have one.
-    ganalytics = "UA-8327470-1"
+    ganalytics = ""
 
 [menu]
 
@@ -55,11 +61,11 @@ PaginatePath = "/"
     [[menu.main]]
     identifier = "home"
     name       = "home"
-    url        = "/"
+    url        = ""
     weight     = 0
 
     [[menu.main]]
     identifier = "about"
     name       = "about"
-    url        = "/about/"
+    url        = "about/"
     weight     = 1
