--- a/wercker.yml
+++ b/wercker.yml
@@ -22,7 +22,7 @@ build:
   steps:
     - arjen/hugo-build@1.8.1:
         theme: slender
-        config: "build-config.toml"
+        config: "config.toml"
         version: "0.15"
         force_install: true
         disable_pygments: true
