post about interviewing as a developer today

--- a/config.toml
+++ b/config.toml
@@ -42,7 +42,7 @@ PaginatePath = "/"
     email = "mailto:brandon@brandon-harris.com"
     github = "https://github.com/bbwharris"
     twitter = "https://twitter.com/bbwharris"
-    linkedin = "https://www.linkedin.com/in/brandonbharris"
+    linkedin = "https://www.linkedin.com/in/bbwharris"
     facebook = "https://www.facebook.com/brandon.b.w.harris"
 
     # Google Analytics
