revert back to brandon-harris.com domain

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://brandonharris.pages.dev"
+baseurl = "https://brandon-harris.com"
 title = "Brandon Harris"
 languageCode = "en-US"
 MetaDataFormat = "toml"
